# dbf2excel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
src/dbf2excel/: cli.py
